menambahkan kegiatan harian 25/2 di chapter6

--- a/section/chapter6.tex
+++ b/section/chapter6.tex
@@ -1,2 +1,14 @@
-\chapter{Discussion}
-Please tell more about conclusion and how to the next work of this study.
+\chapter{Syarah Fauziatul Ulya/1144075}
+\begin{table}[h]
+\caption{Tabel Kegiatan Harian}
+\centering
+\begin{tabular}{|c|c|c|}
+\hline
+No&Tanggal&Kegiatan\\
+\hline
+1.&\multirow{2}{*}{25-02-2019}&1) Membuat repositori Modul Praktikum kelas Pemrograman III.\\
+&&2) Menginstal python, pip, anaconda, dan jupiter dari kursus Udemy.\\
+\hline
+\end{tabular}
+\label{table:contoh}
+\end{table}
