Menambahkan kegiatan harian di IRC

--- a/section/chapter5.tex
+++ b/section/chapter5.tex
@@ -1,14 +1,15 @@
-\chapter{Conclusion}
-brief of conclusion
+\chapter{Rahmatul Ridha/1144124}
 
-\section{Conclusion of Problems}
-Tell about solving the problem
-
-\section{Conclusion of Method}
-Tell about solving using method
-
-\section{Conclusion of Experiment}
-Tell about solving in the experiment
-
-\section{Conclusion of Result}
-tell about result for purpose of this research.
+\begin{table}[h]
+\caption{Tabel Kegiatan Harian}
+\centering
+\begin{tabular}{|c|c|c|}
+\hline
+No&Tanggal&Kegiatan\\
+\hline
+1.&\multirow{2}{*}{25-02-2019}&1) Membuat Repositori Pratikum.\\
+&&2) Menginstal python, pip, anaconda.\\
+\hline
+\end{tabular}
+\label{table:contoh}
+\end{table}
