menambah list kegiatan harian

--- a/section/chapter1.tex
+++ b/section/chapter1.tex
@@ -1,22 +1,32 @@
-\chapter{Introduction}
+\chapter{Dzikri Ahmad Ghifari}
 
-brief of your introduction.Please cite all of your lectures works\cite{pane2018qualitative}\cite{awangga2018k}\cite{Awangga2017}\cite{yulita2017combination}\cite{yulita2017quantization}.
+Tugas Harian tanggal 17/01/2019
+\begin{enumerate}
+\item Membersihkan ruang IRC
+\item Diskusi mengenai penataan ulang ruang IRC
+\end{enumerate}
 
-\section{Background}
-your background
+Tugas Harian tanggal 18/01/2019
+\begin{enumerate}
+\item Membersihkan ruang IRC
+\item Diskusi mengenai rancangan ruang IRC
+\item Diskusi mengenai barang yang harus ditambahkan di ruang IRC
+\item Membuat artikel untuk bahan majalah D4 TI
+\end{enumerate}
 
-\section{Problems}
-the problem you want to solve
+Tugas Harian tanggal 18/02/2019
+\begin{enumerate}
+\item Memperhatikan tingkat 3 presentasi
+\item Mengoreksi laporan tingkat 3 yang presentasi
+\end{enumerate}
 
-\section{Objective and Contribution}
-\subsection{Objective}
-What your research purpose
+Tugas Harian tanggal 25/02/2019
+\begin{enumerate}
+\item Masuk Kelas Pemrograman III
+\item Menginstal python, anaconda
+\item Menambah materi udemy, commit 8b5991b08ef04a0c1581f5976017e7eab865c856
+\end{enumerate}
 
-\subsection{Contribution}
-Whats your contribution
-
-\section{Scoop and Environtment}
-Scoop and environment for the research
 
 
 
