--- a/section/chapter2.tex
+++ b/section/chapter2.tex
@@ -1,23 +1,10 @@
-\chapter{Related Works}
+\chapter{Erik Ginting}
 
-Your related works, and your purpose and contribution which must be different as below.
-
-\section{Same Topics}
-Cite every latest journal with same topic
-\subsection{Topic 1}
-cite for first topic
-
-\subsection{Topic 2}
-if you have two topics you can include here to
+Tugas Harian 25/02/2019
+\begin{enumerate}
+  \item Masuk kelas pemrograman III
+  \item Menginstal Python dan Anaconda
+  \item Menambahkan materi tentang ANN
+\end{enumerate}
 
 
-\section{Same Method}
-write and cite latest journal with same method
-
-\subsection{Method 1}
-cite and paraphrase method 1
-
-\subsection{Method 2}
-cite and paraphrase method 2 if you have more method please add new subsection.
-
- 
