menambah kegiatan harian

--- a/section/chapter1.tex
+++ b/section/chapter1.tex
@@ -18,6 +18,7 @@ Tugas Harian tanggal 18/02/2019
 \begin{enumerate}
 \item Memperhatikan tingkat 3 presentasi
 \item Mengoreksi laporan tingkat 3 yang presentasi
+\item Memeriksa revisian tutorial class diagram adik tingkat
 \end{enumerate}
 
 Tugas Harian tanggal 25/02/2019
