pull request ulang

--- a/section/chapter2.tex
+++ b/section/chapter2.tex
@@ -4,7 +4,7 @@ Tugas Harian 25/02/2019
 \begin{enumerate}
   \item Masuk kelas pemrograman III
   \item Menginstal Python dan Anaconda
-  \item Menambahkan materi tentang ANN
+  \item Menambahkan materi tentang ANNs
 \end{enumerate}
 
 
