menambah tugas harian

--- a/section/chapter1.tex
+++ b/section/chapter1.tex
@@ -30,6 +30,11 @@ Tugas Harian tanggal 25/02/2019
 \item Memeriksa tugas Pemrograman III kelas 2b 
 \end{enumerate}
 
+Tugas Harian tanggal 26/02/2019
+\begin{enumerate}
+\item Masuk kelas Kecerdasan Buatan
+\item Membuat repository tugas kecerdasan buatan kelas 3c
+\end{enumerate}
 
 
 
