menambah tugas harian

--- a/section/chapter1.tex
+++ b/section/chapter1.tex
@@ -34,6 +34,7 @@ Tugas Harian tanggal 26/02/2019
 \begin{enumerate}
 \item Masuk kelas Kecerdasan Buatan
 \item Membuat repository tugas kecerdasan buatan kelas 3c
+\item Menginput nilai tugas Pemrograman III kelas 2b
 \end{enumerate}
 
 
