menambahkan kegiatan di IRC

--- a/section/chapter4.tex
+++ b/section/chapter4.tex
@@ -1,7 +1,15 @@
-\chapter{Experiment and Result}
-brief of experiment and result.
-\section{Experiment}
-Please tell how the experiment conducted from method.
+\chapter{Khalid Ahmad Khadafi/1144003}
 
-\section{Result}
-Please provide the result of experiment
+\begin{table}[h]
+\caption{Tabel Kegiatan Harian}
+\centering
+\begin{tabular}{|c|c|c|}
+\hline
+No&Tanggal&Kegiatan\\
+\hline
+1.&\multirow{2}{*}{02-26-2019}&1) Membuat Repositori Pratikum.\\
+&&2) menginput nilai kelas 2c.\\
+\hline
+\end{tabular}
+\label{table:contoh}
+\end{table}
