menambahkan tugas harian

--- a/section/chapter2.tex
+++ b/section/chapter2.tex
@@ -7,4 +7,11 @@ Tugas Harian 25/02/2019
   \item Menambahkan materi tentang ANNs
 \end{enumerate}
 
+Tugas Harian 26/02/2019
+\begin{enumerate}
+  \item Masuk kelas kecerdasan  buatan
+  \item Input nilai pemrograman III kelas 2C
+  \item Membuat repo kecerdasan buatan kelas 3c
+\end{enumerate}
+
 
