--- a/section/chapter5.tex
+++ b/section/chapter5.tex
@@ -10,6 +10,9 @@ No&Tanggal&Kegiatan\\
 1.&\multirow{2}{*}{25-02-2019}&1) Membuat Repositori Pratikum.\\
 &&2) Menginstal python, pip, anaconda.\\
 \hline
+2.&\multirow{2}{*}{25-02-2019}&1) Mengikuti kelas Kecerdasan Buatan.\\
+&&2) Membuat Repositori untuk Kelas kecerdasan Buatan.\\
+\hline
 \end{tabular}
 \label{table:contoh}
 \end{table}
