menambahkan kegiatan harian 26/2 di chapter6

--- a/section/chapter6.tex
+++ b/section/chapter6.tex
@@ -9,6 +9,9 @@ No&Tanggal&Kegiatan\\
 1.&\multirow{2}{*}{25-02-2019}&1) Membuat repositori Modul Praktikum kelas Pemrograman III.\\
 &&2) Menginstal python, pip, anaconda, dan jupiter dari kursus Udemy.\\
 \hline
+2.&\multirow{2}{*}{26-02-2019}&1) Membuat repositori Modul Praktikum kelas Kecerdasan Buatan.\\
+&&2) Mendata dan menilai tugas 1 kelas 2A- Pemrograman III.\\
+\hline
 \end{tabular}
 \label{table:contoh}
 \end{table}
