--- a/section/chapter3.tex
+++ b/section/chapter3.tex
@@ -1,9 +1,21 @@
-\chapter{Methods}
-
-\section{The data}
-PLease tell where is the data come from, a little brief of company can be put here.
-
-\section{Method 1}
-Definition, steps, algoritm or equation of method 1 and how to apply into your data
-\section{Method 2}
-Definition, steps, algoritm or equation of method 2 and how to apply into your data
+\chapter{Faizal Mutakin/1144078}
+\begin{table}[h]
+\caption{Tabel Kegiatan Harian IRC}
+\centering
+\begin{tabular}{|c|c|c|}
+\hline
+No&Tanggal&Kegiatan\\
+\hline
+1.&\multirow{2}{*}{18-02-2019}&1.persentasii adik tingkat\\
+&&2.meriksa revisi laporan adik tingkat\\
+\hline
+2.&\multirow{2}{*}{25-02-2019}&1. Membuat repositori Modul Praktikum kelas Pemrograman III.\\
+&&2. Menginstal python, pip, anaconda, dan belajar UUDMY.\\
+\hline
+3.&\multirow{2}{*}{26-02-2019}&1.Masuk kelas kecerdasan buatan\\
+&&2.mebuat repositori AI\\
+&&3.memberi nilai hasir pull requesh\\
+\hline
+\end{tabular}
+\label{table:contoh}
+\end{table}
