menambah syarat umum

--- a/main.tex
+++ b/main.tex
@@ -45,6 +45,7 @@ The Degree of Applied Bachelor of Informatics Engineering}  %your college
 \end{romanpages}            % end roman page numbering
 
 %now include the files of latex for each of the chapters etc
+\include{section/syaratumum}
 \include{section/chapter1}
 \include{section/chapter2}
 \include{section/chapter3}
