--- a/section/syaratumum.tex
+++ b/section/syaratumum.tex
@@ -52,7 +52,7 @@ No. & Label & Nilai & Keterangan \\
 \end{tabular}
 \caption{Tabel Produktifitas}
 \label{table:Produktifitas}
-\end{table}  
+\end{table}
 
 \item Integritas
 Berikut kategori penilaian Integritas pada Tabel \ref{table:Integritas}
@@ -71,7 +71,7 @@ No. & Label & Nilai & Keterangan \\
 \end{tabular}
 \caption{Tabel Integritas}
 \label{table:Integritas}
-\end{table}  
+\end{table}
 
 \item Disiplin
 Berikut kategori penilaian Disiplin pada Tabel \ref{table:Disiplin}
@@ -90,7 +90,7 @@ No. & Label & Nilai & Keterangan \\
 \end{tabular}
 \caption{Tabel Disiplin}
 \label{table:Disiplin}
-\end{table}  
+\end{table}
 
 \item Loyalitas
 Berikut kategori penilaian Loyalitas pada Tabel \ref{table:Loyalitas}
@@ -109,7 +109,7 @@ No. & Label & Nilai & Keterangan \\
 \end{tabular}
 \caption{Tabel Loyalitas}
 \label{table:Loyalitas}
-\end{table}  
+\end{table}
 
 \item Kreatif dan Inisiatif
 Berikut kategori penilaian Kreatif dan Inisiatif pada Tabel \ref{table:KnI}
@@ -128,10 +128,60 @@ No. & Label & Nilai & Keterangan \\
 \end{tabular}
 \caption{Tabel Kreatif dan Inisiatif}
 \label{table:KnI}
-\end{table} 
+\end{table}
 \end{enumerate}
 \textbf {Ketentuan}
 \begin{enumerate}
   \item Nilai minimal syarat umum adalah 13 dari rata2 minimall 20 minggu. apabila kurang dari 13 maka bisa menambah lagi waktu intership sesuai dengan kebutuhan nilai minimum.
   \item Syarat khusus bisa diselenggarakan minimal sekali dengan minimal nilai sedang
-\end{enumerate} 
+\end{enumerate}
+\textbf{Penilaian}
+\par Tabel \ref{table:Penilaian} adalah data penilaian mahasiswa Internship II atau TA.
+\begin{table}[!htbp]
+\centering
+\begin{tabular}{ |c|c|c|c|c|c|c|c|c|c| }
+\hline
+ &  &  &  &  \\
+\hline
+ &  &  &  &  \\
+\hline
+ &  &  &  &  \\
+\hline
+ &  &  &  &  \\
+\hline
+ &  &  &  &  \\
+\hline
+ &  &  &  &  \\
+\hline
+ &  &  &  &  \\
+\hline
+ &  &  &  &  \\
+\hline
+ &  &  &  &  \\
+\hline
+ &  &  &  &  \\
+\hline
+ &  &  &  &  \\
+\hline
+ &  &  &  &  \\
+\hline
+ &  &  &  &  \\
+\hline
+ &  &  &  &  \\
+\hline
+ &  &  &  &  \\
+\hline
+ &  &  &  &  \\
+\hline
+ &  &  &  &  \\
+\hline
+ &  &  &  &  \\
+\hline
+ &  &  &  &  \\
+\hline
+ &  &  &  &  \\
+\hline
+\end{tabular}
+\caption{Tabel Penilaian}
+\label{table:Penilaian}
+\end{table}
