input tugas harian

--- a/section/chapter2.tex
+++ b/section/chapter2.tex
@@ -1,17 +1,25 @@
 \chapter{Erik Ginting}
 
-Tugas Harian 25/02/2019
-\begin{enumerate}
-  \item Masuk kelas pemrograman III
-  \item Menginstal Python dan Anaconda
-  \item Menambahkan materi tentang ANNs
-\end{enumerate}
-
-Tugas Harian 26/02/2019
-\begin{enumerate}
-  \item Masuk kelas kecerdasan  buatan
-  \item Input nilai pemrograman III kelas 2C
-  \item Membuat repo kecerdasan buatan kelas 3c
-\end{enumerate}
-
+\begin{table}[h]
+\caption{Tabel Kegiatan Harian IRC}
+\centering
+\begin{tabular}{|c|c|c|}
+\hline
+No&Tanggal&Kegiatan\\
+\hline
+1.&\multirow{2}{*}{25-02-2019}&1.masuk kelas pemrograman III\\
+&&2.menginstal python dan anconda\\ 
+&&3.menambahkan materi tentang ANNs\\
+\hline
+2.&\multirow{2}{*}{26-02-2019}&1.Masuk kelas kecerdasan buatan\\
+&&2.membuat repo kecerdasan buatan kelas 3c\\
+&&3.input nilai pemrograman III kelas 2C\\
+\hline
+3.&\multirow{2}{*}{27-02-2019}&1. input nilai kecerdasan buatan\\
+&&2.memberi arahan kepada adik tingkat yang tugas nya bermasalah kelas 2c\\
+&&3.menyidang yang belum ngerjain tugas kelas 3c\\
+\hline
+\end{tabular}
+\label{table:contoh}
+\end{table} 
 
