--- a/section/chapter5.tex
+++ b/section/chapter5.tex
@@ -13,6 +13,9 @@ No&Tanggal&Kegiatan\\
 2.&\multirow{2}{*}{25-02-2019}&1) Mengikuti kelas Kecerdasan Buatan.\\
 &&2) Membuat Repositori untuk Kelas kecerdasan Buatan.\\
 \hline
+3.&\multirow{2}{*}{26-02-2019}&1)Menginput nilai tugas Kecerdasan Buatan kelas 3C.\\
+&&2)Membimbing anak tingkat 3 dalam mengerjakan tugas kecerdasan buatan.\\
+\hline
 \end{tabular}
 \label{table:contoh}
 \end{table}
