--- a/section/chapter1.tex
+++ b/section/chapter1.tex
@@ -14,6 +14,33 @@ Tugas Harian tanggal 18/01/2019
 \item Membuat artikel untuk bahan majalah D4 TI
 \end{enumerate}
 
+Tugas Harian tanggal 21/01/2019
+\begin{enumerate}
+\item Mencari artikel untuk bahan majalah
+\item Diskusi tentang perancangan ruang sidang di IRC
+\end{enumerate}
+
+Tugas Harian tanggal 30/02/2019
+\begin{enumerate}
+\item Mendata buku yang akan dipindahkan ke IRC
+\end{enumerate}
+
+Tugas Harian tanggal 31/01/2019
+\begin{enumerate}
+\item Memberi label pada buku untuk IRC
+\item Memindahkan buku sumbangan ke IRC
+\end{enumerate}
+
+Tugas Harian tanggal 01/02/2019
+\begin{enumerate}
+\item Praktek github dengan Pak Rolly Maulana Awangga 
+\end{enumerate}
+
+Tugas Harian tanggal 06/02/2019
+\begin{enumerate}
+\item Membuat video pesan, kesan dan kritik untuk IRC
+\end{enumerate}
+
 Tugas Harian tanggal 18/02/2019
 \begin{enumerate}
 \item Memperhatikan tingkat 3 presentasi
@@ -35,7 +62,17 @@ Tugas Harian tanggal 26/02/2019
 \item Masuk kelas Kecerdasan Buatan
 \item Membuat repository tugas kecerdasan buatan kelas 3c
 \item Menginput nilai tugas Pemrograman III kelas 2b
+\item Menambah materi GIS 2019, commit d97e9474087a3faca296fef82e9e7503345ac45e
 \end{enumerate}
+
+Tugas Harian tanggal 27/02/2019
+\begin{enumerate}
+\item Mangecek tugas kecerdasan buatan kelas 3c
+\item Menginput nilai tugas kecerdasan buatan kelas 3c
+\item Memberikan arahan dan hukuman bagi mahasiswa yang tidak melakukan pull request, tidak membenarkan conflict dan tidak mengerjakan tugas Pemrograman III kelas 2b
+\end{enumerate}
+
+
 
 
 
