update bukuharian IRC

--- a/section/chapter3.tex
+++ b/section/chapter3.tex
@@ -16,6 +16,10 @@ No&Tanggal&Kegiatan\\
 &&2.mebuat repositori AI\\
 &&3.memberi nilai hasir pull requesh\\
 \hline
+4.&\multirow{2}{*}{27-02-2019}&1.Cek tugas pull reques 3c\\
+&&2.Memberi nilai kecerdasan buatan\\
+&&3.Mengoreksi adik tingkat yang tidak pull reques\\
+\hline
 \end{tabular}
 \label{table:contoh}
 \end{table}
