menambahakan kegiatan harian 27/2

--- a/section/chapter6.tex
+++ b/section/chapter6.tex
@@ -11,6 +11,11 @@ No&Tanggal&Kegiatan\\
 \hline
 2.&\multirow{2}{*}{26-02-2019}&1) Membuat repositori Modul Praktikum kelas Kecerdasan Buatan.\\
 &&2) Mendata dan menilai tugas 1 kelas 2A- Pemrograman III.\\
+&&3) Membimbing anak kelas 3C untuk tugas Kecerdasan Buatan.\\
+\hline
+3.&\multirow{2}{*}{27-02-2019}&1) Mendata dan menilai tugas kelas 3C-Kecerdasan Buatan.\\
+&&2) Membimbing anak kelas 3C untuk tugas Kecerdasan Buatan.\\
+&&3) Mengkoordinasi tugas kontribusi anak kelas.\\
 \hline
 \end{tabular}
 \label{table:contoh}
