--- a/section/chapter2.tex
+++ b/section/chapter2.tex
@@ -8,7 +8,7 @@
 No&Tanggal&Kegiatan\\
 \hline
 1.&\multirow{2}{*}{25-02-2019}&1.masuk kelas pemrograman III\\
-&&2.menginstal python dan anconda\\ 
+&&2.menginstal python dan anconda\\
 &&3.menambahkan materi tentang ANNs\\
 \hline
 2.&\multirow{2}{*}{26-02-2019}&1.Masuk kelas kecerdasan buatan\\
@@ -19,7 +19,9 @@ No&Tanggal&Kegiatan\\
 &&2.memberi arahan kepada adik tingkat yang tugas nya bermasalah kelas 2c\\
 &&3.menyidang yang belum ngerjain tugas kelas 3c\\
 \hline
+4.&\multirow{2}{*}{28-02-2019}&1. memeriksa laporan tugas AI kelas 3C\\
+&&2.Melanjutkan pembelajaran ANNs dari Udemy \\
+\hline
 \end{tabular}
 \label{table:contoh}
-\end{table} 
-
+\end{table}
