memperbarui kegiatan harian

--- a/section/chapter4.tex
+++ b/section/chapter4.tex
@@ -7,8 +7,11 @@
 \hline
 No&Tanggal&Kegiatan\\
 \hline
-1.&\multirow{2}{*}{02-26-2019}&1) Membuat Repositori Pratikum.\\
+1.&\multirow{2}{*}{02-28-2019}&1) Membuat Repositori Pratikum.\\
 &&2) menginput nilai kelas 2c.\\
+\hline
+2.&\multirow{2}{*}{02-26-2019}&1) Evaluasi mingguan di prodi.\\
+&&2)Meriksa UTS kelas 3C.\\
 \hline
 \end{tabular}
 \label{table:contoh}
