menambah tugas harian

--- a/section/chapter1.tex
+++ b/section/chapter1.tex
@@ -1,12 +1,12 @@
 \chapter{Dzikri Ahmad Ghifari}
 
-Tugas Harian tanggal 17/01/2019
+\textbf{Tugas Harian tanggal 17/01/2019}
 \begin{enumerate}
 \item Membersihkan ruang IRC
 \item Diskusi mengenai penataan ulang ruang IRC
 \end{enumerate}
 
-Tugas Harian tanggal 18/01/2019
+\textbf{Tugas Harian tanggal 18/01/2019}
 \begin{enumerate}
 \item Membersihkan ruang IRC
 \item Diskusi mengenai rancangan ruang IRC
@@ -14,64 +14,206 @@ Tugas Harian tanggal 18/01/2019
 \item Membuat artikel untuk bahan majalah D4 TI
 \end{enumerate}
 
-Tugas Harian tanggal 21/01/2019
+\textbf{Tugas Harian tanggal 21/01/2019}
 \begin{enumerate}
 \item Mencari artikel untuk bahan majalah
 \item Diskusi tentang perancangan ruang sidang di IRC
 \end{enumerate}
 
-Tugas Harian tanggal 30/02/2019
+\textbf{Tugas Harian tanggal 30/02/2019}
 \begin{enumerate}
 \item Mendata buku yang akan dipindahkan ke IRC
 \end{enumerate}
 
-Tugas Harian tanggal 31/01/2019
+\textbf{Tugas Harian tanggal 31/01/2019}
 \begin{enumerate}
 \item Memberi label pada buku untuk IRC
 \item Memindahkan buku sumbangan ke IRC
 \end{enumerate}
 
-Tugas Harian tanggal 01/02/2019
+\textbf{Tugas Harian tanggal 01/02/2019}
 \begin{enumerate}
 \item Praktek github dengan Pak Rolly Maulana Awangga 
 \end{enumerate}
 
-Tugas Harian tanggal 06/02/2019
+\textbf{Tugas Harian tanggal 06/02/2019}
 \begin{enumerate}
 \item Membuat video pesan, kesan dan kritik untuk IRC
 \end{enumerate}
 
-Tugas Harian tanggal 18/02/2019
+
+\textbf{Tugas Harian tanggal 18/02/2019}
 \begin{enumerate}
 \item Memperhatikan tingkat 3 presentasi
 \item Mengoreksi laporan tingkat 3 yang presentasi
 \item Memeriksa revisian tutorial class diagram adik tingkat
 \end{enumerate}
 
-Tugas Harian tanggal 25/02/2019
+\textbf{Tugas Harian tanggal 25/02/2019}
 \begin{enumerate}
 \item Masuk Kelas Pemrograman III
 \item Menginstal python, anaconda
 \item Menambah materi udemy, commit 8b5991b08ef04a0c1581f5976017e7eab865c856
 \item Menambah materi di GIS2019, commit f1535f03dd64c09ddba50f68371ec04b878846e9, commit 0ff764471c1cefd7e6b20d81027d7d810c1343d5, commit c054dcbfa03e9a2d9ef56f3302d8f0854840d758
-\item Memeriksa tugas Pemrograman III kelas 2b 
+\item Memeriksa tugas Pemrograman III kelas 2b (1174034 Ichsan Hizman Hardy, 1174050 Dika Sukma Pradana, 1174042 Faisal Najib Abdullah, 1174035 Luthfi Muhammad Nabil, 1174040 Hagan Rowlenstino, 1174043 Irvan Rizkiansyah, 1174063 Muhamad Iqbal Panggabean, 1174057 Alit fajar Kurniawan, 1174059 Kevin Natanael Nainggolan)
 \end{enumerate}
 
-Tugas Harian tanggal 26/02/2019
+\textbf{Dedikasi}
+\begin{enumerate} 
+\item  Menambah materi di GIS2019 (commit f1535f03dd64c09ddba50f68371ec04b878846e9, commit 0ff764471c1cefd7e6b20d81027d7d810c1343d5, commit c054dcbfa03e9a2d9ef56f3302d8f0854840d758)
+\end{enumerate}
+
+\textbf{Produktifitas}
+\begin{enumerate}
+\item Masuk Kelas Pemrograman III
+\item Menginstal python, anaconda
+\item Menambah materi udemy, commit 8b5991b08ef04a0c1581f5976017e7eab865c856
+\item Menambah materi di GIS2019 (commit f1535f03dd64c09ddba50f68371ec04b878846e9, commit 0ff764471c1cefd7e6b20d81027d7d810c1343d5, commit c054dcbfa03e9a2d9ef56f3302d8f0854840d758)
+\item Memeriksa tugas Pemrograman III kelas 2b (1174034 Ichsan Hizman Hardy, 1174050 Dika Sukma Pradana, 1174042 Faisal Najib Abdullah, 1174035 Luthfi Muhammad Nabil, 1174040 Hagan Rowlenstino, 1174043 Irvan Rizkiansyah, 1174063 Muhamad Iqbal Panggabean, 1174057 Alit fajar Kurniawan, 1174059 Kevin Natanael Nainggolan)
+\end{enumerate}
+
+\textbf{Integritas}
+\begin{enumerate}
+\item (skip dulu)
+\end{enumerate}
+
+\textbf{Disiplin}
+\begin{enumerate}
+\item Jam Masuk : 08.40
+\item Jam Keluar : 15.30
+\end{enumerate}
+
+\textbf{Loyalitas}
+
+\begin{enumerate}
+\item (skip dulu)
+\end{enumerate}
+
+
+\textbf{Tugas Harian tanggal 26/02/2019}
 \begin{enumerate}
 \item Masuk kelas Kecerdasan Buatan
 \item Membuat repository tugas kecerdasan buatan kelas 3c
-\item Menginput nilai tugas Pemrograman III kelas 2b
+\item Menginput nilai tugas Pemrograman III kelas 2b (1174034 Ichsan Hizman Hardy, 1174050 Dika Sukma Pradana, 1174042 Faisal Najib Abdullah, 1174035 Luthfi Muhammad Nabil, 1174040 Hagan Rowlenstino, 1174043 Irvan Rizkiansyah, 1174063 Muhamad Iqbal Panggabean, 1174057 Alit fajar Kurniawan, 1174059 Kevin Natanael Nainggolan )
 \item Menambah materi GIS 2019, commit d97e9474087a3faca296fef82e9e7503345ac45e
 \end{enumerate}
 
-Tugas Harian tanggal 27/02/2019
+\textbf{Dedikasi}
 \begin{enumerate}
-\item Mangecek tugas kecerdasan buatan kelas 3c
-\item Menginput nilai tugas kecerdasan buatan kelas 3c
-\item Memberikan arahan dan hukuman bagi mahasiswa yang tidak melakukan pull request, tidak membenarkan conflict dan tidak mengerjakan tugas Pemrograman III kelas 2b
+\item Menambah materi GIS 2019, commit d97e9474087a3faca296fef82e9e7503345ac45e
 \end{enumerate}
 
+\textbf{Produktifitas}
+\begin{enumerate}
+\item Masuk kelas Kecerdasan Buatan
+\item Membuat repository tugas kecerdasan buatan kelas 3c
+\item Menginput nilai tugas Pemrograman III kelas 2b (1174034 Ichsan Hizman Hardy, 1174050 Dika Sukma Pradana, 1174042 Faisal Najib Abdullah, 1174035 Luthfi Muhammad Nabil, 1174040 Hagan Rowlenstino, 1174043 Irvan Rizkiansyah, 1174063 Muhamad Iqbal Panggabean, 1174057 Alit fajar Kurniawan, 1174059 Kevin Natanael Nainggolan)
+\item Menambah materi GIS 2019, commit d97e9474087a3faca296fef82e9e7503345ac45e
+\end{enumerate}
+
+\textbf{Integritas}
+
+\begin{enumerate}
+\item (skip dulu)
+\end{enumerate}
+
+\textbf{Disiplin}
+\begin{enumerate}
+\item Jam Masuk : 08.40
+\item Jam Keluar : 15.30
+\end{enumerate}
+
+\textbf{Loyalitas}
+Keterangan
+\begin{enumerate}
+\item (skip dulu)
+\end{enumerate}
+
+\textbf{Tugas Harian tanggal 27/02/2019}
+\begin{enumerate}
+\item Mangecek tugas kecerdasan buatan kelas 3c (Andi Muh Aslam 1164064 dan Aip Suprapto Munari 1164063)
+\item Menginput nilai tugas kecerdasan buatan kelas 3c (Andi Muh Aslam 1164064 dan Aip Suprapto Munari 1164063)
+\item Memberikan arahan dan hukuman bagi mahasiswa yang tidak melakukan pull request, tidak membenarkan conflict dan tidak mengerjakan tugas Pemrograman III kelas 2b
+\item Menambah gambar pada Materi GIS (menambahkan gambar \#11) 
+\end{enumerate}
+
+\textbf{Dedikasi}
+
+\begin{enumerate}
+\item Menambah gambar pada Materi GIS (menambahkan gambar \#11) 
+\end{enumerate}
+
+\textbf{Produktifitas}
+
+\begin{enumerate}
+\item Mangecek tugas kecerdasan buatan kelas 3c (Andi Muh Aslam 1164064 dan Aip Suprapto Munari 1164063)
+\item Menginput nilai tugas kecerdasan buatan kelas 3c (Andi Muh Aslam 1164064 dan Aip Suprapto Munari 1164063)
+\item Memberikan arahan dan hukuman bagi mahasiswa yang tidak melakukan pull request, tidak membenarkan conflict dan tidak mengerjakan tugas Pemrograman III kelas 2b
+\item Menambah gambar pada Materi GIS (menambahkan gambar \#11) 
+\end{enumerate}
+
+\textbf{Integritas}
+
+\begin{enumerate}
+\item (skip dulu)
+\end{enumerate}
+
+\textbf{Disiplin}
+
+\begin{enumerate}
+\item Jam Masuk : 08.40
+\item Jam Keluar : 15.30
+\end{enumerate}
+
+\textbf{Loyalitas}
+
+\begin{enumerate}
+\item (skip dulu)
+\end{enumerate}
+
+
+\textbf{Tugas Harian tanggal 28/02/2019}
+\begin{enumerate}
+\item Evaluasi mingguan dengan Pak Rolly Maulana Awangga
+\item Menilai hasil UAS kelas 1C, 3A dan 3C
+\item Menata ulang ruang IRC
+\item Memeriksa tugas kelas Kecerdasan Buatan 3C Andi Muh Aslam 1164064, hari2 \#3 dan  Aip Suprapto Munari 1164063  (tugas masih conflict)
+\item Menginput nilai tugas Kecerdasan Buatan kelas 3C Andi Muh Aslam 1164064 dan Aip Suprapto Munari 1164063 
+\end{enumerate}
+
+\textbf{Dedikasi}
+
+\begin{enumerate}
+\item (skip dulu)
+\end{enumerate}
+
+\textbf{Produktifitas}
+\begin{enumerate}
+\item Evaluasi mingguan dengan Pak Rolly Maulana Awangga
+\item Menilai hasil UAS kelas 1C, 3A dan 3C
+\item Menata ulang ruang IRC
+\item Memeriksa tugas kelas Kecerdasan Buatan 3C Andi Muh Aslam 1164064, hari2 \#3 dan  Aip Suprapto Munari 1164063  (tugas masih conflict)
+\item Menginput nilai tugas Kecerdasan Buatan kelas 3C Andi Muh Aslam 1164064 dan Aip Suprapto Munari 1164063 
+\end{enumerate}
+
+\textbf{Integritas}
+
+\begin{enumerate}
+\item (skip dulu)
+\end{enumerate}
+
+\textbf{Disiplin}
+
+\begin{enumerate}
+\item Jam Masuk : 08.40
+\item Jam Keluar : 17.30
+\end{enumerate}
+
+\textbf{Loyalitas}
+
+\begin{enumerate}
+\item (skip dulu)
+\end{enumerate}
 
 
 
