menambah daftar tugas harian

--- a/section/chapter1.tex
+++ b/section/chapter1.tex
@@ -96,6 +96,8 @@
 \item Membuat repository tugas kecerdasan buatan kelas 3c
 \item Menginput nilai tugas Pemrograman III kelas 2b (1174034 Ichsan Hizman Hardy, 1174050 Dika Sukma Pradana, 1174042 Faisal Najib Abdullah, 1174035 Luthfi Muhammad Nabil, 1174040 Hagan Rowlenstino, 1174043 Irvan Rizkiansyah, 1174063 Muhamad Iqbal Panggabean, 1174057 Alit fajar Kurniawan, 1174059 Kevin Natanael Nainggolan )
 \item Menambah materi GIS 2019, commit d97e9474087a3faca296fef82e9e7503345ac45e
+\item Menandatangani acc tutorial membuat class diagram (Ajis Trigunawan 1164031 dan Wildan Khaustara W 1164058)
+\item Memeriksa dan memberi revisian jurnal projek II Ajis Trigunawan 1164031
 \end{enumerate}
 
 \textbf{Dedikasi}
@@ -107,10 +109,11 @@
 \begin{enumerate}
 \item Masuk kelas Kecerdasan Buatan
 \item Membuat repository tugas kecerdasan buatan kelas 3c
-\item Menginput nilai tugas Pemrograman III kelas 2b (1174034 Ichsan Hizman Hardy, 1174050 Dika Sukma Pradana, 1174042 Faisal Najib Abdullah, 1174035 Luthfi Muhammad Nabil, 1174040 Hagan Rowlenstino, 1174043 Irvan Rizkiansyah, 1174063 Muhamad Iqbal Panggabean, 1174057 Alit fajar Kurniawan, 1174059 Kevin Natanael Nainggolan)
+\item Menginput nilai tugas Pemrograman III kelas 2b (1174034 Ichsan Hizman Hardy, 1174050 Dika Sukma Pradana, 1174042 Faisal Najib Abdullah, 1174035 Luthfi Muhammad Nabil, 1174040 Hagan Rowlenstino, 1174043 Irvan Rizkiansyah, 1174063 Muhamad Iqbal Panggabean, 1174057 Alit fajar Kurniawan, 1174059 Kevin Natanael Nainggolan )
 \item Menambah materi GIS 2019, commit d97e9474087a3faca296fef82e9e7503345ac45e
+\item Menandatangani acc tutorial membuat class diagram (Ajis Trigunawan 1164031 dan Wildan Khaustara W 1164058)
+\item Memeriksa dan memberi revisian jurnal projek II Ajis Trigunawan 1164031
 \end{enumerate}
-
 \textbf{Integritas}
 
 \begin{enumerate}
