menambahkan laporan harian 28/02/2019

--- a/main.tex
+++ b/main.tex
@@ -5,6 +5,7 @@
 %load any additional packages
 \usepackage{amssymb}
 \usepackage{multirow}
+\usepackage{graphicx}
 
 %input macros (i.e. write your own macros file called mymacros.tex
 %and uncomment the next line)
