--- a/section/chapter6.tex
+++ b/section/chapter6.tex
@@ -20,3 +20,23 @@ No&Tanggal&Kegiatan\\
 \end{tabular}
 \label{table:contoh}
 \end{table}
+
+\begin{table}[]
+\caption{Tabel Laporan Harian (Kamis, 28 Februari 2018)}
+\resizebox{\textwidth}{!}{%
+\begin{tabular}{|l|l|l|}
+\hline
+\textbf{No} & \multicolumn{1}{c|}{\textbf{Kategori}} & \multicolumn{1}{c|}{\textbf{Keterangan}} \\ \hline
+1 & Dedikasi & BukuInformatika/flask \#12 \\ \hline
+2 & Produktifitas & \begin{tabular}[c]{@{}l@{}}a. Evaluasi mingguan dan sosialisasi format baru penilaian \\ peserta internship II di IRC dan Prodi.\end{tabular} \\
+ &  & \begin{tabular}[c]{@{}l@{}}b. Memeriksa lembar jawaban UAS GIS kelas 3C dan Arkom \\ kelas 1C. \end{tabular}\\
+ &  & \begin{tabular}[c]{@{}l@{}}c. Menginput nilai UAS kelas 1C, 3A, 3B, dan 3C di google\\ docs. \end{tabular} \\
+ &  & \begin{tabular}[c]{@{}l@{}l@{}}d. Mengkoordinir mahasiswa untuk tugas kontribusi\\ pembuatan cover, pencetakan, sampai pendistribusian buku \\di Grup Whatsapp.\end{tabular} \\
+ &  & \begin{tabular}[c]{@{}l@{}l@{}}e. Memeriksa tugas kecerdasan buatan kelas 3C serta meng-\\input nilai ke google docs atas nama Fadila, Lusia Violita \\Aprilian, dan Rahmi Roza.\end{tabular} \\ \hline
+3 & Integritas & able to merge/has no conflict \\ \hline
+4 & Disiplin & Jam Datang : 07.55 WIB \\
+ &  & Jam Pulang : 17.00 WIB \\ \hline
+5 & Loyalitas & \begin{tabular}[c]{@{}l@{}}Menyapu, membersihkan dan merapihkan meja, mencuci\\ gelas, dan mengecek AC di pagi dan sore hari.\end{tabular} \\ \hline
+\end{tabular}%
+}
+\end{table}
