menambahkan nomor gelas

--- a/section/chapter6.tex
+++ b/section/chapter6.tex
@@ -36,7 +36,7 @@ No&Tanggal&Kegiatan\\
 3 & Integritas & able to merge/has no conflict \\ \hline
 4 & Disiplin & Jam Datang : 07.55 WIB \\
  &  & Jam Pulang : 17.00 WIB \\ \hline
-5 & Loyalitas & \begin{tabular}[c]{@{}l@{}}Menyapu, membersihkan dan merapihkan meja, mencuci\\ gelas, dan mengecek AC di pagi dan sore hari.\end{tabular} \\ \hline
+5 & Loyalitas & \begin{tabular}[c]{@{}l@{}}Menyapu, membersihkan dan merapihkan meja, mencuci\\ gelas nomor 6, dan mengecek AC di pagi dan sore hari.\end{tabular} \\ \hline
 \end{tabular}%
 }
 \end{table}
