update bukuharian IRC

--- a/section/chapter3.tex
+++ b/section/chapter3.tex
@@ -2,40 +2,63 @@
 \begin{table}[h]
 \caption{Tabel Kegiatan Harian IRC}
 \centering
-\begin{tabular}{|c|c|c|}
+\begin{tabular}{|c|c|l|}
 \hline
 No&Tanggal&Kegiatan\\
 \hline
-1.&\multirow{2}{*}{18-02-2019}&1.persentasii adik tingkat\\
-&&2.meriksa revisi laporan adik tingkat\\
-&&3.pull request gis2019\\
+1.&\multirow{2}{*}{25-02-2019}&1. Membuat repositori Modul\\
+&&Praktikum kelas Pemrograman III.(PRODUKTIF)\\
+&&2. Menginstal python, pip, anaconda, dan belajar UUDMY.(PRODUKTIF)\\
+&&3.Pull request gis2019(merged 8) (DEDIKASI)\\
+&&4.Masuk 08:52 Keluar 03:34 (DISIPLIN)\\
 \hline
-2.&\multirow{2}{*}{25-02-2019}&1. Membuat repositori Modul Praktikum kelas Pemrograman III.\\
-&&2. Menginstal python, pip, anaconda, dan belajar UUDMY.\\
-&&3.pull request gis2019\\
+2.&\multirow{2}{*}{26-02-2019}&1.Masuk kelas kecerdasan buatan (PRODUKTIF)\\
+&&2.Mebuat repositori AI (PRODUKTIF)\\
+&&3.Memberi nilai hasir pull requesh kelas 2B (PRODUKTIF)\\
+&&4.Masuk 08:48 Keluar 04:48 (DISIPLIN)\\
 \hline
-3.&\multirow{2}{*}{26-02-2019}&1.Masuk kelas kecerdasan buatan\\
-&&2.mebuat repositori AI\\
-&&3.memberi nilai hasir pull requesh\\
-&&4.pull request gis2019\\
+3.&\multirow{2}{*}{27-02-2019}&1.Cek tugas pull reques 3c (PRODUKTIF)\\
+&&2.Memberi nilai kecerdasan buatan (PRODUKTIF)\\
+&&3.Mengoreksi adik tingkat yang tidak pull reques (PRODUKTIF)\\
+&&4.Masuk 08:49 Keluar 4:15 (DISIPLIN)\\
 \hline
-4.&\multirow{2}{*}{27-02-2019}&1.Cek tugas pull reques 3c\\
-&&2.Memberi nilai kecerdasan buatan\\
-&&3.Mengoreksi adik tingkat yang tidak pull reques\\
-&&4.pull request di buku informatika gis2019\\
-\hline
-5.&\multirow{2}{*}{27-02-2019}&1.evaluasi tugas mingguan di prodi\\
-&&2.Menilai hasil UAS kelas 3A\\
-&&3.pembagian tempat kebersihan di ruangan irc\\
-&&4.menata ulang tempat komputer\\
+4.&\multirow{2}{*}{28-02-2019}&1.evaluasi tugas mingguan di prod (PRODUKTIF)\\
+&&2.Menilai hasil UAS kelas 3A (PRODUKTIF)\\
+&&3.pembagian tempat kebersihan di ruangan irc (PRODUKTIF)\\
+&&4.menata ulang tempat komputer (LOYALITAS)\\
 &&5.input nilai kecerdasan buatan andri fajar sunandhar(1164065)\\
-&& Imron Sumadireja(1164076) Yusniar Syarif Sidiq \\
-&&6.pull request gis2019\\
+&&Imron Sumadireja(1164076)\\
+&&Yusniar Syarif Sidiq (PRODUKTIF)\\
+&&6.pull request gis2019(merged 12) (PRODUKTIF)\\
+&&7.Masuk 8:57 Keluar 05:15 (DISIPLIN)\\
 \hline
-4.&\multirow{2}{*}{27-02-2019}&1.Cek tugas pull reques 3c\\
-&&2.Memberi nilai kecerdasan buatan\\
-&&3.Mengoreksi adik tingkat yang tidak pull reques\\
+5.&\multirow{2}{*}{01-03-2019}&1.membersihkan ruangan pribadi IRC (LOYALITAS)\\
+&&2.pull request gis2019(merged 15) (PRODUKTIF)\\
+&&3.latihan TOEFL (LOYALITAS)\\
+&&4.Masuk 8:57 Keluar 04:10) (DISIPLIN)\\
 \hline
 \end{tabular}
 \label{table:contoh}
+\end{table}
+ 
+\begin{table}[h]
+\begin{center}
+\caption{Tabel Mingguan}
+\begin{tabular}{|c|l|}
+\hline
+Kategori& Sekor Nilai Kategori mingguan\\
+\hline
+Dedikasi & -\\
+\hline
+Produktif & -\\
+\hline
+Integritas & -\\
+\hline
+Disiplin & -\\
+\hline
+Loyalitas & -\\
+\hline
+\end{tabular}
+\end{center}
+\label {Tabel:contoh} 
 \end{table}
