--- a/section/chapter6.tex
+++ b/section/chapter6.tex
@@ -40,3 +40,21 @@ No&Tanggal&Kegiatan\\
 \end{tabular}%
 }
 \end{table}
+
+\begin{table}[]
+\caption{Tabel Laporan Harian (Kamis, 28 Februari 2018)}
+\resizebox{\textwidth}{!}{%
+\begin{tabular}{|l|l|l|}
+\hline
+\textbf{No} & \multicolumn{1}{c|}{\textbf{Kategori}} & \multicolumn{1}{c|}{\textbf{Keterangan}} \\ \hline
+1 & Dedikasi &  \\ \hline
+2 & Produktifitas & \begin{tabular}[c]{@{}l@{}}a. Mengerjakan Soal Toefl Pre-Test 2 (Computer Based)\\Skor Toefl: 55\end{tabular} \\
+ &  & \begin{tabular}[c]{@{}l@{}}b. Mendata skor toefl peserta Internship II di IRC.\end{tabular}\\
+ &  & \begin{tabular}[c]{@{}l@{}}c. Memeriksa pull request di laporanirc/2019 \end{tabular}\\ \\ \hline
+3 & Integritas & able to merge/has no conflict \\ \hline
+4 & Disiplin & Jam Datang : 07.39 WIB \\
+ &  & Jam Pulang : 14.20 WIB \\ \hline
+5 & Loyalitas & \begin{tabular}[c]{@{}l@{}}Menyapu, membersihkan dan merapihkan meja, membeli\\ sabun dan spons cuci piring, dan mengecek AC\\ di pagi dan sore hari.\end{tabular} \\ \hline
+\end{tabular}%
+}
+\end{table}
