menambah tugas harian

--- a/section/chapter1.tex
+++ b/section/chapter1.tex
@@ -234,13 +234,56 @@ Keterangan
 \textbf{Disiplin}
 \begin{enumerate}
 \item Jam Masuk : 08.40
-\item Jam Keluar : 
+\item Jam Keluar : 17.30
 \end{enumerate}
 
 \textbf{Loyalitas}
 \begin{enumerate}
 \item Mengecek AC saat datang dan pulang dari IRC
 \item Menjaga peralatan yang ada di IRC
+\item Merapihkan kursi yang ada di IRC
+\end{enumerate}
+
+\textbf{Tugas Harian tanggal 02/03/2019}
+\begin{enumerate} 
+\item Melakukan pre test TOEFL 
+\item Memberi tahu kelas 3B untuk mencantumkan sitasi dan sumber di daftar pustaka mengenai materi GIS
+\item menambah materi dan gambar mengenai sumber sumber data geospasial \#16
+\end{enumerate}
+
+\textbf{Dedikasi}
+\begin{enumerate}
+\item menambah materi dan gambar mengenai sumber sumber data geospasial \#16
+\end{enumerate}
+
+\textbf{Produktifitas}
+\begin{enumerate}
+\item Melakukan pre test TOEFL 
+\item Memberi tahu kelas 3B untuk mencantumkan sitasi dan sumber di daftar pustaka mengenai materi GIS
+\item menambah materi dan gambar mengenai sumber sumber data geospasial \#16
+\end{enumerate}
+
+\textbf{Integritas}
+\begin{enumerate}
+\item able to merge/has no conflict
+\end{enumerate}
+
+
+\textbf{Disiplin}
+\begin{enumerate}
+\item Jam Masuk : 08.40
+\item Jam Keluar : 11.40 (Dikarenakan ada sosialisasi INTERNSHIP II)
+\end{enumerate}
+
+
+\textbf{Loyalitas}
+\begin{enumerate}
+\item Mengecek AC saat datang dan pulang dari IRC
+\item Menjaga peralatan yang ada di IRC
+\item Merapihkan kursi setelah pulamg dari IRC
+\item Mengelap meja pribadi
+\item Menyapu dan merapihkan area sidang IRC
+\item Membersihkan lemari buku 
 \end{enumerate}
 
 
