Update laporan harian tanggal 01/03/2019

--- a/section/chapter5.tex
+++ b/section/chapter5.tex
@@ -23,3 +23,30 @@ No&Tanggal&Kegiatan\\
 \end{tabular}
 \label{table:contoh}
 \end{table}
+
+
+\begin{table}[]
+\caption{Tabel Kegiatan Harian}
+\centering
+\begin{tabular}{|l|l|l|}
+\hline
+\textbf{Tanggal} & \multicolumn{1}{c|}{\textbf{Kategori}} & \multicolumn{1}{c|}{\textbf{Keterangan}}\\ \hline
+28/02/2019 & Dedikasi & 2019\#25, Flask\#11\\ \hline
+ & Produktif & 1. Evaluasi Mingguan diProdi. \\ 
+ & & 2. Memeriksa lembar jawaban uas kelas 3c. \\ 
+ & & 3. Menginputkan nilai tugas harian Kecerdasan Buatan \\ 
+ & Integritas & Able to Merge\\ 
+ & Disiplin & Masuk jam : 08.55\\ 
+ & & Pulang jam : 17.25 \\ 
+ & Loyalitas & Merapikan meja kerja sebelum pulang\\ \hline
+01/03/2019 & Dedikasi & Flask\#13\\ \hline
+ & Produktif & 1. Mengerjakan test Toefl. \\ 
+ & & \begin{tabular}[c]{@{}l@{}}2. Merincikan dan merapikan data untuk \\ laporan harian pada latex.\end{tabular} \\ 
+ & & 3. Sosialisasi Internship II di Audiotorium.\\ 
+ & Integritas & Able to Merge\\ 
+ & Disiplin & Masuk jam : 09.05\\ 
+ & & Pulang jam : 17.15\\ 
+ & Loyalitas & \begin{tabular}[c]{@{}l@{}}Merapikan meja kerja, merapikan dan membersihkan \\ lemari buku.\end{tabular} \\ \hline
+\end{tabular}
+\end{table}
+
