menambah tugas harian

--- a/section/chapter1.tex
+++ b/section/chapter1.tex
@@ -286,4 +286,27 @@ Keterangan
 \item Membersihkan lemari buku 
 \end{enumerate}
 
+\section{Score Mingguan dari tanggal 25/02/2019 sampai 02/03/2019}
+Total score mingguan adalah 15 keterangan seperti pada Tabel \ref{table:scoremingguan}.
+\begin{table}[!ht]
+\centering
+\begin{tabular}{ |c|c|c|c|c|c|c|c|c|c| }
+\hline
+Kategori & Keterangan Nilai \\
+\hline
+Dedikasi & 3 \\
+\hline
+Produktif & 3 \\
+\hline
+Integritas & 3 \\
+\hline
+Disiplin & 3 \\
+\hline
+Loyalitas & 3 \\
+\hline
+\end{tabular}
+\caption{Tabel Score Mingguan}
+\label{table:scoremingguan}
+\end{table}
+
 
